@@ -1,3 +1,14 @@
+2013-04-17  Anton Arapov  <anton@redhat.com>
+
+	Update to support SMBIOS specification version 2.8.0.
+
+	* dmidecode.c: Correct processor family name (DMI type 4).
+	* dmidecode.c: Correct typo in processor upgrade type (DMI type 4).
+	* dmidecode.c: Add 9 new processor families (DMI type 4).
+	* dmidecode.c: Add 2 new Intel socket types (DMI type 4).
+	* dmidecode.c: Add Min/Max/Configured memory voltages (DMI type 17).
+	* dmidecode.c: Add LRDIMM to memory device list (DMI type 17).
+
 2012-03-26  Anton Arapov  <anton@redhat.com>
 
 	* man/dmidecode.8: Add missing DMI type introduced with SMBIOS 2.7+, and
